0.6.0 Bertrand Janin <b@janin.com> (..........)

	* Switch to semantic versioning.
	* Increase default GPG timeout to 20s (suggested by Franck Labadille)
	* Build using -lncurses on Mac (ncursesw not available).
	* Use c99 boolean for results 'show' instead of two value enum.
	* Increase compilation warnings and clean most of them up.
	* Fix pager display bug on long lines.
	* Fix a bug with mdp unable to properly detect a SIGINT sent to gpg.
	* Increased max line size to 16KB (both password and config).

0.5 Bertrand Janin <b@janin.com> (2013-08-01)

	* Added support for regex match using -E.
	* Added option to disable backup file generation.
	* Fix detection of unchanged files.
	* Fix creation of the initial password file.
	* Properly cleanup the lock if gpg times out.
	* Fix opening the editor if GnuPG failed (e.g. bad passphrase).

0.4 Bertrand Janin <b@janin.com> (2013-07-29)

	* Fixed compilation on openSUSE (by pbleser @ github).
	* Fix #4 (removal of EOLs on edit).

0.3 Bertrand Janin <b@janin.com> (2013-07-17)

	* Moved all source code to src/.
	* Fix query-mode.
	* Quadruple and unify the maximum allowable line size.
	* Configurable count of iteration when generating passwords.
	* Fixed wide-char characters on Linux by compiling against ncursesw.
	* Warn the user if a password line is too long and can't be parsed.
	* Fixed a bug when using % in your passwords (go printf).

0.2 Bertrand Janin <b@janin.com> (2013-05-03)

	* Fix Linux compilation (by Wu Jiang <wu@morediff.info>)
	* Fix the file permission (by Wu Jiang <wu@morediff.info>)

0.1 Bertrand Janin <b@janin.com>

	* Initial C rewrite of my 10 years old shell script.
