@@ -3,7 +3,7 @@
 # GnuPG absolute path (default: /usr/bin/gpg)
 set gpg_path "/usr/local/bin/gpg"
 
-# GnuPG key id (default: none, let gpg pick a key)
+# GnuPG key id (REQUIRED)
 set gpg_key_id "6453194A"
 
 # GnuPG timeout (how soon to kill gpg if nothing happens, e.g. user forgot or
