@@ -22,10 +22,22 @@
 .Sh SYNOPSIS
 .Nm mdp
 .Bk -words
+.Op Fl Vh
 .Op Fl c Ar config
-.Op Fl g Ar length
-.Op Fl erqVh
-.Op Ar keyword ...
+.Op Fl k Ar key_id
+.Fl e
+.Ek
+.Nm mdp
+.Bk -words
+.Op Fl Vh
+.Op Fl c Ar config
+.Fl g Ar length
+.Ek
+.Nm mdp
+.Bk -words
+.Op Fl ErqVh
+.Op Fl c Ar config
+.Ar keyword ...
 .Ek
 .Sh DESCRIPTION
 .Nm
@@ -47,6 +59,9 @@ Use an alternate configuration file.
 Edit your password file (decrypt and re-encrypt after the fact).
 .It Fl E
 Use regexes instead of plain text matches (e.g. ^.mail).
+.It Fl k Ar key_id
+GnuPG key id (8 alpha-numeric characters). This could be used to specify your
+GnuPG key id in case you did not define it in your configuration file.
 .It Fl q
 Start
 .Nm
@@ -54,7 +69,7 @@ in query mode instead of displaying results directly. This will avoid you
 from entering your GPG password multiple time. Query mode times out after
 a few seconds of inactivity.
 .It Fl r
-Displays the result without pager, plain terminal dump.
+Displays the result without pager, plain terminal dump (not recommended).
 .It Fl g Ar length
 Generates 4 passwords of the given length.
 .It Fl V
@@ -88,10 +103,14 @@ This is a summary of all the available configuration variables and options:
 GnuPG absolute path (default: /usr/bin/gpg)
 .Pp
 .It Ic set gpg_key_id Ar key_id
-GnuPG key id (default: none). If no key is selected, gpg will attempt to pick
-the key bound to the password file. When saving the file, you will be
-prompted to pick the encryption key. This can get quickly annoying, you're
-highly suggested to set this value.
+GnuPG key id (default: none). If no key is selected,
+.Nm
+will expect you to specify it on the command-line (-k). If no key was specified
+either way,
+.Nm
+will abort. This was made mandatory to avoid password loss. Note that this
+parameter is ignored during the decryption phase, GnuPG picks the key based on
+the content of the password file.
 .Pp
 .It Ic set gpg_timeout Ar seconds
 Number of seconds to give GnuPG for password and pipe interaction. The
