@@ -8,6 +8,8 @@
 	* Fix pager display bug on long lines.
 	* Fix a bug with mdp unable to properly detect a SIGINT sent to gpg.
 	* Increased max line size to 16KB (both password and config).
+	* gpg_key_id is now mandatory.
+	* Added -k parameter to define the GnuPG key if missing from config.
 
 0.5 Bertrand Janin <b@janin.com> (2013-08-01)
 
